--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ header {
     position: fixed;
     top: 0;
     margin-bottom: 8px;
-    padding-bottom: 16px;
+    padding-bottom: 44px;
     background-color: #ebe9df;
 }
 
@@ -26,9 +26,7 @@ header {
     width: 100%;
     height: 10vh;
     align-content: center;
-    position: sticky;
-    
-    
+    position: sticky;  
 }
 
 ul {
@@ -151,25 +149,31 @@ main {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    position: relative;
 }
 
 .project-card {
     margin-top: 32px;
     width: 26vw;
-    border: solid 1px #312016;
+    background-color: #e7d4c800;
     height: 70vh;
-    border-radius: 5px;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
     align-items: center;
     padding: 20px 20px;
+    border: solid 1px;
 }
 
 .project-card:hover{
     transform: translateY(-20px);
-    transition-duration: 200ms;
+    transition-duration: 400ms;
     box-shadow: #312016 2px 2px 10px;
+}
+
+.project-card.inactive {
+    transform: translateX(-100vw);
+    transition-duration: 1000ms;
 }
 
 .project-image {
@@ -181,9 +185,37 @@ main {
     text-align: center;
 }
 
-/*FOOTER*/
+.card-hidden {
+    display: none;
+    position: absolute;
+    height: 80vh;
+    width: 100%;
+    z-index: -100;
+    margin-left: 100vw;
+}
 
+.card-hidden.expanded {
+    padding: 64px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 2fr;
+    gap: 32px;
+    margin: 32px;
+    top: 0;
+    height: 80vh;
+    width: 100%;
+    z-index: 100;
+}
 
+.grid-card {
+    border: solid 1px;
+}
 
+.grid-card:nth-child(2) {
+    grid-column: 1;
+    grid-row: 2/3;
+}
 
-
+.grid-card:last-child {
+    grid-row: 1/3;
+}
