--- a/styles/style.css
+++ b/styles/style.css
@@ -163,6 +163,7 @@ main {
     align-items: center;
     padding: 20px 20px;
     border: solid 1px;
+    cursor: pointer;
 }
 
 .project-card:hover{
@@ -195,7 +196,7 @@ main {
 }
 
 .card-hidden.expanded {
-    padding: 64px;
+    padding: 124px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 2fr;
@@ -218,4 +219,24 @@ main {
 
 .grid-card:last-child {
     grid-row: 1/3;
+}
+
+.button {
+    position: absolute;
+    margin: 32px;
+    height: 5vh;
+    width: 2.5vw;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+}
+
+.button.back{
+    z-index: 999;
+}
+
+.button.next{
+    right: 0;
+    top: 35vh;
+    z-index: 999;
 }
