--- a/styles/style.css
+++ b/styles/style.css
@@ -149,21 +149,20 @@ main {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: relative;
 }
 
 .project-card {
-    margin-top: 32px;
-    width: 26vw;
-    background-color: #e7d4c800;
-    height: 70vh;
-    display: flex;
+    display: none; /*--->flex*/
     flex-flow: column;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 20px;
+    width: 26vw;
+    height: 70vh;
+    margin-top: 32px;
+    padding: 20px;
     border: solid 1px;
     cursor: pointer;
+    transition: transform 800ms ease-in;
 }
 
 .project-card:hover{
@@ -172,9 +171,17 @@ main {
     box-shadow: #312016 2px 2px 10px;
 }
 
+.project-card.active {
+    transform: translateY(-100vh);
+}
+
 .project-card.inactive {
     transform: translateX(-100vw);
-    transition-duration: 1000ms;
+}
+
+.project-card.no-hover:hover {
+    transform: none;
+    box-shadow: none;
 }
 
 .project-image {
@@ -186,57 +193,7 @@ main {
     text-align: center;
 }
 
-.card-hidden {
-    display: none;
-    position: absolute;
-    height: 80vh;
-    width: 100%;
-    z-index: -100;
-    margin-left: 100vw;
+.card-expanded {
+    
 }
 
-.card-hidden.expanded {
-    padding: 124px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 2fr;
-    gap: 32px;
-    margin: 32px;
-    top: 0;
-    height: 80vh;
-    width: 100%;
-    z-index: 100;
-}
-
-.grid-card {
-    border: solid 1px;
-}
-
-.grid-card:nth-child(2) {
-    grid-column: 1;
-    grid-row: 2/3;
-}
-
-.grid-card:last-child {
-    grid-row: 1/3;
-}
-
-.button {
-    position: absolute;
-    margin: 32px;
-    height: 5vh;
-    width: 2.5vw;
-    cursor: pointer;
-    border: none;
-    background-color: transparent;
-}
-
-.button.back{
-    z-index: 999;
-}
-
-.button.next{
-    right: 0;
-    top: 35vh;
-    z-index: 999;
-}
