--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@ html {
 body {
     margin: 0;
     padding-top: 10vh;
+    overflow-x: hidden;
 }
 
 header {
@@ -114,7 +115,7 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 8px 16px 32px 16px;
+    margin: 8px 16px 128px 16px;
 }
 
 
@@ -145,38 +146,42 @@ main {
 
 .projects {
     margin: 8px 16px;
+    padding: 0 9vw;
     height: 87vh;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
 .project-card {
-    display: none; /*--->flex*/
+    display: flex; /*--->none*/
     flex-flow: column;
     justify-content: space-between;
     align-items: center;
-    width: 26vw;
-    height: 70vh;
+    width: 20vw;
+    height: 60vh;
     margin-top: 32px;
-    padding: 20px;
-    border: solid 1px;
+    padding: 2vh 0;
+    background-color: rgba(156, 122, 103, 0.6);
+    box-shadow: #312016 5px 5px 10px;
     cursor: pointer;
-    transition: transform 800ms ease-in;
+    transition: transform 2s ease, opacity 3s ease;
 }
 
 .project-card:hover{
     transform: translateY(-20px);
-    transition-duration: 400ms;
     box-shadow: #312016 2px 2px 10px;
+    transition-duration: 200ms;
 }
 
 .project-card.active {
     transform: translateY(-100vh);
+    opacity: 0;
 }
 
 .project-card.inactive {
     transform: translateX(-100vw);
+    opacity: 0;
 }
 
 .project-card.no-hover:hover {
@@ -184,16 +189,77 @@ main {
     box-shadow: none;
 }
 
+.project-title {
+    padding: 0 16px;
+    background-color: rgba(99, 140, 168, 0.5);
+    color: rgb(12 12 12 / 0.5);
+    border-radius: 5px;
+}
+
 .project-image {
-    width: 80%;
-    height: 60%;
+    margin: 16px;
+    width: 60%;
+    height: 50%;
 }
 
 .project-description{
+    font-size: 1.5em;
     text-align: center;
+    margin: 16px 32px;
 }
 
 .card-expanded {
-    
+    display: none; /*none*/
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 2fr;
+    gap: 32px;
+    position: relative;
+    padding: 124px;
+    margin: 32px;
+    height: 80vh;
+    width: 97vw;
+    margin-left: 100vw;
+    opacity: 0;
+    transition: transform 700ms ease-in-out, opacity 2.2s ease;
 }
 
+.card-expanded.in {
+    transform: translateX(-99vw);
+    opacity: 1;
+}
+
+
+.grid-card {
+    border: solid 1px;
+}
+
+.grid-card.title  {
+    background-color: #5aa783;
+    grid-row: 1/2;
+}
+
+.grid-card.image {
+    background-color: #9c4189;
+    grid-row: 2/3;
+}
+
+.grid-card.description {
+    background-color: #d4d38e;
+    grid-row: 1/3;
+}
+
+.button {
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.button.next {
+    right: 0;    
+    top: 50%;
+    margin-right: 12px;
+}
+
+
+  
