--- a/styles/style.css
+++ b/styles/style.css
@@ -45,10 +45,6 @@ li a:hover {
     transition: 200ms;
 }
 
-.no-hover {
-    pointer-events: none;
-}
-
 .menu-item {
     align-content: center;
     margin-top: 0vh; /*depends on the typography*/
@@ -110,15 +106,15 @@ main {
 
 .about-me img {
     margin-top: 10px;
-    height: 830px;
-    width: 35vw;
+    height: 86vh;
+    width: 45vw;
 }
 
 .about-me div {
-    margin: 0 auto 0 350px;
-    height: 500px;
+    margin: 0 5vw 0vh 10vw;
+    height: 60vh;
     width: 40vw;
-    align-self: center;
+    align-self: flex-end;
 }
 
 .text-about-me-title {
@@ -131,6 +127,7 @@ main {
     font-family: "Poiret One", sans-serif;
     font-weight: bold;
     font-size: 1.5rem;
+    text-align: justify;
 }
 
 .projects {
@@ -140,6 +137,20 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.projects.in {
+    transition: opacity 1s ease;
+}
+
+@starting-style {
+    .projects.in {
+      opacity: 0;
+    }
+}
+
+.hidden {
+    display: none;
 }
 
 .project-card {
@@ -154,13 +165,18 @@ main {
     background-color: rgba(156, 122, 103, 0.6);
     box-shadow: #312016 5px 5px 10px;
     cursor: pointer;
-    transition: transform 1s ease, opacity 3s ease;
+    transition: transform .9s ease, opacity 3s ease;
 }
 
 .project-card:hover {
     transform: translateY(-20px);
     box-shadow: #312016 2px 2px 10px;
     transition-duration: 200ms;
+}
+
+.project-card.no-hover {
+    filter: blur(10px);
+    transform: scale(0.9, 0.9);
 }
 
 .project-card.active {
@@ -171,11 +187,6 @@ main {
 .project-card.inactive {
     transform: translateX(-100vw);
     opacity: 0;
-}
-
-.project-card.no-hover:hover {
-    transform: none;
-    box-shadow: none;
 }
 
 .project-title {
@@ -218,6 +229,9 @@ main {
     opacity: 1;
 }
 
+.card-expanded.out {
+    opacity: 0;
+}
 
 .grid-card {
     border: solid 1px;
@@ -243,7 +257,14 @@ main {
     border: none;
     background-color: transparent;
     cursor: pointer;
+    transition: opacity 8s ease-out;
 }
+
+@starting-style {
+    .button {
+      opacity: 0;
+    }
+  }
 
 .button.next {
     right: 0;    
