span added on title of sections and js modified so focusMenuItemOnScroll gets all those span and appends the first section as item gotten by id

--- a/styles/style.css
+++ b/styles/style.css
@@ -278,7 +278,7 @@ main {
     justify-content: space-around;
 }
 
-.projects-title {
+.section-title {
     display: block;
     margin-top: 8vh;
     margin-left: 10vw;
