--- a/styles/style.css
+++ b/styles/style.css
@@ -100,7 +100,7 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: start;
-    margin: 8px 16px 128px 16px;
+    margin: 8px 16px 128px 16px;/**/
     overflow: hidden;
 }
 
@@ -113,7 +113,7 @@ main {
 }
 
 .about-me div {
-    margin: 0 5vw 0vh 10vw;
+    margin: 0 10vw 10vh 0vw;
     height: 60vh;
     width: 40vw;
     align-self: flex-end;
@@ -133,9 +133,9 @@ main {
 }
 
 .projects {
-    margin: 8px 16px;
+    margin: 8px 16px 64px 8px;
     padding: 0 9vw;
-    height: 77vh;
+    height: 72vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -214,11 +214,11 @@ main {
     display: none; /*none*/
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 2fr;
-    gap: 32px;
+    gap: 64px;
     position: relative;
-    padding: 124px;
-    margin: 32px;
-    height: 80vh;
+    padding: 100px;
+    margin: 64px 64px 118px 64px;
+    height: 65vh;
     width: 97vw;
     margin-left: 100vw;
     opacity: 0;
@@ -236,22 +236,39 @@ main {
 }
 
 .grid-card {
-    border: solid 1px;
+    display: flex;
 }
 
 .grid-card.title  {
-    background-color: #5aa783;
+    align-items: flex-start;
+    margin: 0 auto;
     grid-row: 1/2;
 }
 
+#projectExpandedTitle {
+    font-size: 32px;
+}
+
 .grid-card.image {
-    background-color: #9c4189;
+    display: flex;
+    justify-content: center;
+    width: auto;
     grid-row: 2/3;
 }
 
+.grid-card.image img {
+    width: 400px;
+    height: 400px;
+}
+
 .grid-card.description {
-    background-color: #d4d38e;
+    align-items: center;
+    margin: 0 100px 0 auto;
     grid-row: 1/3;
+}
+
+.grid-card.description .project-description {
+    text-align: justify;
 }
 
 .button {
@@ -284,7 +301,7 @@ main {
     display: block;
     margin-top: 8vh;
     margin-left: 10vw;
-    size: 10em;
+    font-size: 30px;
 }
 
 section ~ section {
