--- a/styles/style.css
+++ b/styles/style.css
@@ -228,13 +228,29 @@ main {
 }
 
 .card-expanded {
-    display: none; /*none*/
+    display: none;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 2fr;
     gap: 32px;
     width: 97vw;
     height: 100%;
     padding: 100px;
+    opacity: 1;
+}
+
+.card-expanded.in {
+    transition: opacity 500ms ease;
+}
+
+@starting-style {
+    .card-expanded.in {
+      opacity: 0;
+    }
+}
+
+.card-expanded.out {
+    transform: translateX(100vw);
+    transition: 1s ease;
 }
 
 .grid-card {
@@ -307,11 +323,4 @@ main {
 
 section ~ section {
     height: 100vh;
-}
-
-.mi-cv {
-    width: 100px;
-    height: 100px;
-    border: solid 1px;
-    margin: 64px;
 }
